--- a/dancefloor.html
+++ b/dancefloor.html
@@ -6,11 +6,19 @@
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
+    <script src="src/harryDancer.js"></script>
+    <script src="src/hermoineDancer.js"></script>
+    <script src="src/snapeDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBlinkyDancer">add a blinky dancer</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBlinkyDancer">add a blinky dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeHarryDancer">add Harry</a> 
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeHermoineDancer">add Hermoine</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeSnapeDancer">add Snape</a>
+      <a href="#" class="lineUp">Line Up</a>    
+    </div>
     <script src="src/init.js"></script>
   </body>
 </html>
