Added images, background, and some effects

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -9,15 +9,21 @@
     <script src="src/harryDancer.js"></script>
     <script src="src/hermoineDancer.js"></script>
     <script src="src/snapeDancer.js"></script>
+    <script src="src/ronDancer.js"></script>
+    <script src="src/dumbledoreDancer.js"></script>
+    <script src="src/voldemortDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
-      <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBlinkyDancer">add a blinky dancer</a>
+      <span class="title"><img class=HPlogo src='harry-potter-logo.png'/> DANCE PARTY</span>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeHarryDancer">add Harry</a> 
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeHermoineDancer">add Hermoine</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeSnapeDancer">add Snape</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeRonDancer">add Ron</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeDumbledoreDancer">add Dumbledore</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeVoldemortDancer">He Who Must Not Be Named</a>
       <a href="#" class="lineUp">Line Up</a>    
+      <a href="#" class="harryDancerButton">Move Harry</a>   
     </div>
     <script src="src/init.js"></script>
   </body>
