--- a/dancefloor.html
+++ b/dancefloor.html
@@ -15,16 +15,24 @@
   </head>
   <body>
     <div class="topbar">
-      <span class="title"><img class=HPlogo src='harry-potter-logo.png'/> DANCE PARTY</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeHarryDancer">add Harry</a> 
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeHermoineDancer">add Hermoine</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeSnapeDancer">add Snape</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeRonDancer">add Ron</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeDumbledoreDancer">add Dumbledore</a>
+      <img class=HPlogo src='harry-potter-logo.png'/><span class="title"> dance party</span>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeHarryDancer">Harry</a> 
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeHermoineDancer">Hermoine</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeSnapeDancer">Snape</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeRonDancer">Ron</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeDumbledoreDancer">Dumbledore</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeVoldemortDancer">He Who Must Not Be Named</a>
-      <a href="#" class="lineUp">Line Up</a>    
-      <a href="#" class="harryDancerButton">Move Harry</a>   
+      <a href="#" class="lineUp">Fight Evil</a>     
+      <a href="#" class="shuffle">Shuffle</a>  
     </div>
+    <div class="arena"></div>
     <script src="src/init.js"></script>
+  <!-- <div data-video="M7lc1UVf-VE " M7lc1UVf-VE 
+         data-autoplay="0"         
+         data-loop="1"             
+         id="youtube-audio">
+  </div>
+  <script src="https://www.youtube.com/iframe_api"></script>
+  <script src="https://cdn.rawgit.com/labnol/files/master/yt.js"></script> -->
   </body>
 </html>
